# ada_meal_scenario

./: CHANGELOG.rst  CMakeLists.txt  README.md  cmovetraj.txt  morsel_offsets.txt  package.xml  setup.py
data/environments/: tablewithglass.env.xml
data/objects/: fork.kinbody.xml
data/trajectories/: ADA_traj_lookingAtPlate.xml  ADA_traj_serving.xml  JACO_traj_lookingAtPlate.xml  JACO_traj_serving.xml  traj_lookingAtFace.xml  traj_lookingAtPlate.xml  traj_serving.xml
data/yaml/: morsel_offsets.yaml
launch/: biteserving.launch
scripts/: bite_serving_FSM_loadFromTraj.py  dummy_morsel_detector.py  generate_saved_trajectories.py  gui_test.py  runBiteServing.py  runBiteServing_FSM.py  run_bite_serving.py
src/: bite_serving.py  bite_serving_FSM.py  bite_serving_FSM_generateTraj.py  bite_serving_FSM_timeTest.py  runBiteServing.py  tasklogger.py  water_pouring.py  water_serving.py
src/actions/: bite_serving.py  bypassable_action.py  detect_bite.py  detect_morsal.py  get_bite.py  get_morsal.py  trajectory_actions.py
src/ada_meal_scenario/: add_constraints.py  gui_handler.py
src/ada_meal_scenario/actions/: assistance_policy_action.py  bite_serving.py  bypassable_action.py  detect_morsal.py  detect_morsel.py  direct_teleop_action.py  get_morsal.py  get_morsel.py  trajectory_actions.py
src/web_interface/: INSTRUCTIONS  commands.txt  data_transfer.js  feed_listener.py  index.html  meal_view.js  morsel_backend.py  server.py  view_adapter.js
test/: dummy_morsal_detector.py
v0.1.0/: .rosinstall
v0.2.0/: .rosinstall
v0.3.0/: .rosinstall
v0.4.0/: .rosinstall
v0.5.0/: .rosinstall
v0.6.0/: .rosinstall
v0.7.0/: .rosinstall
